fix overlapping menu

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1027,7 +1027,7 @@ footer a {
 	color: black;
 }
 
-@media print, screen and (max-width: 1100px) {
+@media print, screen and (max-width: 1280px) {
 
     .logobox, .logobox2 {
         width: inherit;
